k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gnw-app
  namespace: gnw
spec:
  selector:
    app: gnw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
